[project]
name = "flet-flashlight"
version = "0.2.0"
description = "A Flet extension to manage the device torch/flashlight."
readme = "README.md"
authors = [{ name = "Flet contributors", email = "hello@flet.dev" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet >=0.70.0.dev0",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet-dev.github.io/flet-flashlight"
Repository = "https://github.com/flet-dev/flet-flashlight"
Issues = "https://github.com/flet-dev/flet-flashlight/issues"

[tool.setuptools.package-data]
"flutter.flet_flashlight" = ["**/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocstrings-python-xref",
    "mike",
    "markdown>=3.6",
    "pymdown-extensions",
    "mkdocs-glightbox",
    "mkdocs-section-index",
    "griffe-modernized-annotations",
    "pygments>=2.16",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
