[project]
name = "flashlight_example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet-flashlight @ git+https://github.com/flet-dev/flet-flashlight.git",
  "flet>=0.25.2",
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Flet Flashlight Example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.25.2",
]
