[project]
name = "flashlight_example"
version = "1.0.0"
description = "Flet Flashlight Example"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet-flashlight",
    "flet",
]


# Docs: https://flet.dev/docs/publish
[tool.flet]
org = "com.mycompany"
product = "Flet Flashlight Example"
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-flashlight = "../.." # relative path
flet = "git+https://github.com/flet-dev/flet.git@v1#subdirectory=sdk/python/packages/flet"

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
]

[tool.uv.sources]
flet-flashlight = { path = "../../", editable = true }
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }
