[project]
name = "flet-flashlight-example"
version = "1.0.0"
description = "flet-flashlight-example"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet-flashlight",
    "flet",
]


# Docs: https://flet.dev/docs/publish
[tool.flet]
org = "com.mycompany"
product = "flet-flashlight-example"
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"
